have to fix z-index

--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -119,7 +119,6 @@ $gutter: 50px;
 				max-width: 86em;
 				margin-top: -46em;
 				z-index: -1000;
-	
 			}
 	}
 
@@ -137,7 +136,7 @@ $gutter: 50px;
 
 	img{
 		max-width: 100%;
-		height: auto;
+		// height: auto;
 	}
 
 }
